--- a/ListaReyes/Regalos.html
+++ b/ListaReyes/Regalos.html
@@ -338,7 +338,16 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="col-lg-4 mb-4 custom-categoria extra">
+                    <div class="card">
+                        <img src="img/PougesForever.jpg" class="card-img-top" alt="Regalo 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Collar de Outer Banks</h5>
+                            <p class="card-text">Collar vintage inspirado en el programa de televisión de Pogue, regalo OBX.</p>
+                            <a href="https://www.amazon.es/KUIYAI-Vintage-Inspirado-Mujeres-inoxidable/dp/B09J7VVJ63/ref=sr_1_13?sr=8-13" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
