--- a/ListaReyes/index.html
+++ b/ListaReyes/index.html
@@ -72,7 +72,7 @@
     <section class="intro-section text-center">
         <div class="container">
             <h1>Introducción Sobre Esta Paguina Web</h1>
-            <p>Paguina de David Perera para su lista de regalos de navidad aqui podreis encontrar barias cosas para David:</p>
+            <p>Paguina de David Perera para su lista de regalos de navidad aqui podreis encontrar varias cosas para David:</p>
         </div>
     </section>
 
@@ -86,7 +86,7 @@
                 <!-- Texto y botón -->
                 <div class="col-lg-6">
                     <h2 class="font-weight-bold">Lista de Regalos</h2>
-                    <p class="lead">En este apartado de esta paguina web es donde podras encontrar los regalos para David donde estaran bien ordenados por categorias y con sus respectivos links de compra</p>
+                    <p class="lead">En este apartado de esta pagina web es donde podras encontrar los regalos para David donde estaran bien ordenados por categorias y con sus respectivos links de compra</p>
                     <!-- Botón que dirige a otra página -->
                     <a href="Regalos.html" class="btn btn-primary btn-lg">Ver Lista de Regalos</a>
                 </div>
